--- a/student-backend/pom.xml
+++ b/student-backend/pom.xml
@@ -18,7 +18,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!--数据库-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
